# iLQR

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  solvers.py
src/ilqr/: __init__.py  solvers.py
tests/: test_ilqr_bicycle.py  test_ilqr_cartpole.py  test_ilqr_parking.py  test_ilqr_pendulum.py  test_ilqr_rocket.py  test_ilqr_unit.py
tests/utils/: __init__.py  animation.py
