[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ilqr"
version = "0.1.0"
description = "JAX-based iLQR (iterative Linear Quadratic Regulator) solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12_pip]>=0.6.0",
    "numpy>=2.0.0,<3.0.0",
    "matplotlib>=3.9.0",
    "scipy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
